src/test/ui/const-generics/issues/issue-61522-array-len-succ.min.stderr
error: generic parameters may not be used in const operations
  --> $DIR/issue-61522-array-len-succ.rs:6:45
   |
LL | pub struct MyArray<const COUNT: usize>([u8; COUNT + 1]);
   |                                             ^^^^^ cannot perform const operation using `COUNT`
   |
   = help: const parameters may only be used as standalone arguments, i.e. `COUNT`
   = help: use `#![feature(const_generics)]` and `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/issue-61522-array-len-succ.rs:11:30
   |
LL |     fn inner(&self) -> &[u8; COUNT + 1] {
   |                              ^^^^^ cannot perform const operation using `COUNT`
   |
   = help: const parameters may only be used as standalone arguments, i.e. `COUNT`
   = help: use `#![feature(const_generics)]` and `#![feature(generic_const_exprs)]` to allow generic const expressions

error: aborting due to 2 previous errors

